messing with dropdown menu

--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -16,3 +16,10 @@ header .container{
 header .container h1{
     font-family: "bebas neue";
 }
+
+
+@media only screen and (max-width:768px){
+    #navmobile{
+        display: none;
+    }
+}
