changed file name

--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -12,11 +12,14 @@ header{
 header .container{
     padding-top: 25px;
 }
-
+ 
 header .container h1{
     font-family: "bebas neue";
 }
 
+header #menu{
+    width: 50%;
+}
 
 @media only screen and (max-width:768px){
     #navmobile{
