changed park lists

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -84,7 +84,7 @@ main{
     background-position: center;
     border: 10px solid white;
     color: white;
-    padding: 50px 0;
+    padding: 70px 0 40px 0;
     box-shadow: 5px 5px 10px black;
     margin-right: 15px;
 }
