--- a/CSS/index.css
+++ b/CSS/index.css
@@ -20,6 +20,8 @@ header .container-fluid{
  
 header .container-fluid h1{
     font-family: "bebas neue";
+    word-spacing: 25px;
+    letter-spacing: 3px;
 }
 
 header #menu{
@@ -76,6 +78,7 @@ main{
     color:white;
     box-shadow: 5px 5px 10px black;
 }
+
 
 #parks{
     background-image: url(https://images.unsplash.com/photo-1552537595-b30edb7afd9d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80);
