added collapsable div to listed divs

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -79,6 +79,9 @@ main{
     box-shadow: 5px 5px 10px black;
 }
 
+button{
+    font-size: 30px;
+}
 
 #parks{
     background-image: url(https://images.unsplash.com/photo-1552537595-b30edb7afd9d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80);
