--- a/CSS/index.css
+++ b/CSS/index.css
@@ -6,8 +6,6 @@
 
 
 header{
-    background-color: rgb(230, 224, 224);
-    height: 100px;
     border: 4px solid white;
     position: fixed;
     top:0;
@@ -43,7 +41,7 @@ main{
     background-color: rgb(203, 224, 248);
     border: 4px solid white;
     position: relative;
-    top: 100px;
+    top:50px;
 }
 
 #center{
@@ -52,7 +50,7 @@ main{
 
 #blog{
     border: 10px solid white;
-    margin:15px 0 15px 15px;
+    margin:15px;
     background-image: url(../Resources/Images/journel.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
