--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,7 @@
 /*universal section*/
 
 
-
+/*homepage*/
 /*Header Section*/
 
 
@@ -37,7 +37,7 @@ header #menu{
 
 /*main section*/
 
-main{
+#mainhome{
     background-color: rgb(203, 224, 248);
     border: 4px solid white;
     position: relative;
@@ -128,4 +128,48 @@ main{
     border: 10px solid white;
     margin-top: 15px;
     box-shadow: 5px 5px 10px black;
+}
+
+
+
+/*about me page*/
+
+#mainabout{
+    background-color: rgb(203, 224, 248);
+    border: 4px solid white;
+    position: relative;
+   
+}
+
+
+    /*header section*/
+
+#aboutmeheader{
+    background-image: url(../Resources/Images/family.jpeg);
+    background-size: cover;
+    background-position-y: 45%;
+    height: 300px;
+    background-color:rgb(203, 224, 248);
+}
+
+#aboutmeP{
+    text-shadow: 3px 3px black;
+    
+}
+
+
+/*body section*/
+
+
+img{
+    width: 100%;
+    height: 400px;
+    border: 10px solid white;
+    border-radius: 3%;
+    box-shadow: 5px 5px 10px black;
+}
+
+#aboutmepara{
+    padding-top: 25px;
+
 }
