--- a/CSS/index.css
+++ b/CSS/index.css
@@ -112,7 +112,7 @@ header #menu{
     color: white;
     padding: 50px 0;
     box-shadow: 5px 5px 10px black;
-    margin: 15px;
+    margin-right: 15px;
 }
 
 #secondrow{
@@ -135,7 +135,7 @@ header #menu{
 /*about me page*/
 
 #mainabout{
-    background-color: rgb(203, 224, 248);
+    
     border: 4px solid white;
     position: relative;
    
@@ -145,9 +145,9 @@ header #menu{
     /*header section*/
 
 #aboutmeheader{
-    background-image: url(../Resources/Images/family.jpeg);
+    background-image: url(../Resources/Images/IMG_1882.jpeg);
     background-size: cover;
-    background-position-y: 45%;
+    background-position-y: 40%;
     height: 300px;
     background-color:rgb(203, 224, 248);
 }
@@ -163,7 +163,6 @@ header #menu{
 
 img{
     width: 100%;
-    height: 400px;
     border: 10px solid white;
     border-radius: 3%;
     box-shadow: 5px 5px 10px black;
