--- a/CSS/index.css
+++ b/CSS/index.css
@@ -135,25 +135,25 @@ header #menu{
 /*about me page*/
 
 #mainabout{
-    background-color: rgb(203, 224, 248);
+    background-image: url(../Resources/Images/stripaboutme.jpeg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 55% 30%;
     border: 4px solid white;
     position: relative;
+    top: 50px;
    
 }
 
 
     /*jumbotron section*/
 
-#aboutmeheader{
-    background-image: url(../Resources/Images/IMG_1882.jpeg);
-    background-size: cover;
-    background-position-y: 40%;
-    height: 300px;
-    background-color:rgb(203, 224, 248);
-}
+
 
 #aboutmeP{
     text-shadow: 3px 3px black;
+    padding: 50px 0;
     
 }
 
@@ -161,15 +161,22 @@ header #menu{
 /*body section*/
 
 
+#aboutimgdiv{
+    padding:50px 0;
+}
+
 #aboutmeimg{
     width: 100%;
     border: 10px solid white;
     border-radius: 3%;
     box-shadow: 5px 5px 10px black;
+   
 }
 
 #aboutmepara{
     padding-top: 25px;
+    font-size: 30px;
+    
 
 }
 
