messing with borders

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -131,10 +131,18 @@ header #menu{
 }
 
 #my-carousel{
+    
     border: 10px solid white;
-    margin-top: 15px;
     box-shadow: 5px 5px 10px black;
     margin: 15px;
+}
+
+.carousel-inner{
+    max-height: 400px;
+    
+}
+.carousel-inner img{
+   max-height: 450px;
 }
 
 
