--- a/CSS/index.css
+++ b/CSS/index.css
@@ -117,6 +117,7 @@ header #menu{
 
 #secondrow{
     margin:auto;
+    padding-bottom: 25px;
 }
 
 #licenter{
@@ -142,7 +143,7 @@ header #menu{
     
 }
 .carousel-inner img{
-   max-height: 450px;
+   max-height: 500px;
 }
 
 
@@ -242,4 +243,24 @@ header #menu{
 
 #familydescrip{
     padding:20px 0;
+}
+
+
+/*footer section*/
+
+footer{
+    height: 50px;
+    background-color: #f8f9fa;
+    border: 4px solid white;
+    
+}
+
+footer p{
+    padding-top: 20px;
+    padding-left: 10px;
+    font-size: larger;
+}
+
+footer i{
+    padding:17px 10px 0 0
 }
