added some sample text to homepage blog

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -57,6 +57,7 @@ header #menu{
     color: white;
     padding: 50px 0;
     box-shadow: 5px 5px 10px black;
+    font-size: 25px;
 }
 
 #healthysnacks{
