added shadowbod to why blog

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -99,6 +99,7 @@ header #menu{
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    box-shadow: 5px 5px 10px black;
     
     
 }
