--- a/CSS/index.css
+++ b/CSS/index.css
@@ -200,7 +200,9 @@ header #menu{
 /*Family page*/
 
 #mainfamily{
-    background-color: rgb(203, 224, 248);
+    background-image: url(../Resources/Images/vegasbackground.jpeg);
+    background-size: cover;
+    background-attachment: fixed;
     border: 4px solid white;
     position: relative;
    
