changed margin on dad time

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -113,7 +113,7 @@ header #menu{
     color: white;
     padding: 50px 0;
     box-shadow: 5px 5px 10px black;
-    margin-right: 15px;
+    margin: 15px;
 }
 
 #secondrow{
