changed font size on Dadtime and Whyblog

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -116,6 +116,9 @@ header #menu{
     box-shadow: 5px 5px 10px black;
     margin: 15px;
 }
+#dadtimeP{
+    font-size: 25px;
+}
 
 #secondrow{
     margin:auto;
