changed button size on activities link

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -77,6 +77,7 @@ header #menu{
     margin: 15px;
     color:white;
     box-shadow: 5px 5px 10px black;
+    font-size: 25px;
 }
 
 #detaildiv{
@@ -84,7 +85,7 @@ header #menu{
 }
 
 #parks{
-    background-image: url(https://images.unsplash.com/photo-1552537595-b30edb7afd9d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80);
+    background-image: url(../Resources/Images/junglegym2.jpeg);
     background-size: cover;
     background-position: 0 60%;
     background-repeat: no-repeat;
