--- a/CSS/index.css
+++ b/CSS/index.css
@@ -167,6 +167,7 @@ header #menu{
 
 /*about me page*/
 
+/* created new about me page old code from old about me page
 #mainabout{
     background-image: url(../Resources/Images/stripaboutme.jpeg);
     background-attachment: fixed;
@@ -176,9 +177,18 @@ header #menu{
     border: 4px solid white;
     position: relative;
     top: 50px;
-   
-}
-
+   }
+   */
+ #mainabout2{
+     background-image: url(../Resources/Images/family.jpeg);
+     height: 450px;
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-position: center;
+     color: white;
+     text-shadow: 3px 3px black;
+    
+ }
 
     /*jumbotron section*/
 
@@ -193,7 +203,7 @@ header #menu{
 
 /*body section*/
 
-
+/* old about me page
 #aboutimgdiv{
     padding:50px 0;
 }
@@ -212,9 +222,10 @@ header #menu{
     
 
 }
+*/
 
 /*Family page*/
-
+/* removed family page
 #mainfamily{
     background-image: url(../Resources/Images/vegasbackground.jpeg);
     background-size: cover;
@@ -222,6 +233,20 @@ header #menu{
     border: 4px solid white;
     position: relative;
    
+}
+*/
+
+/* new about me page*/
+
+#aboutmetitle{
+    margin-top: 30px;
+}
+
+#aboutmeimg2{
+    width: 550px;
+    box-shadow: 5px 5px 10px black;
+    border: 10px solid white;
+    margin: 15px;
 }
 
 /*jumbotron section*/
