changed title and about me to about us

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -17,7 +17,7 @@ header .container-fluid{
 }
  
 header .container-fluid h1{
-    font-family: "bebas neue";
+    font-family: "Fuggles","bebas neue";
     word-spacing: 25px;
     letter-spacing: 3px;
 }
