--- a/CSS/index.css
+++ b/CSS/index.css
@@ -20,7 +20,10 @@ header .container-fluid{
 header #menu{
     width: 50%;
     flex-wrap: nowrap;
-    
+}
+
+#nav-bartitle{
+    font-size: 3rem;
 }
 
 
