--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,7 +11,7 @@ header{
     top:0;
     z-index: 100;
     width: 100%;
-    font-family: "fuggles";
+    font-family: "fuggles","festive", "cursive";
     font-size: 2rem;
 }
 header .container-fluid{
