--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,20 +11,23 @@ header{
     top:0;
     z-index: 100;
     width: 100%;
+    font-family: "fuggles","festive", "cursive";
+    font-size: 2rem;
+}
+
+#headerHeigth{
+    height: 100px;
 }
 header .container-fluid{
     padding: 25px;
 }
- 
-header .container-fluid h1{
-    font-family: "bebas neue";
-    word-spacing: 25px;
-    letter-spacing: 3px;
-}
-
 header #menu{
     width: 50%;
     flex-wrap: nowrap;
+}
+
+#nav-bartitle{
+    font-size: 4rem;
 }
 
 
@@ -41,7 +44,7 @@ header #menu{
     background-color: rgb(203, 224, 248);
     border: 4px solid white;
     position: relative;
-    top:50px;
+    top:106px;
 }
 
 #center{
@@ -51,7 +54,6 @@ header #menu{
 #blog{
     border: 10px solid white;
     margin:15px;
-    margin-top: 50px;
     background-image: url(../Resources/Images/journel.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -59,6 +61,11 @@ header #menu{
     padding: 50px 0;
     box-shadow: 5px 5px 10px black;
     font-size: 25px;
+}
+
+#blogtitle{
+    font-family: "fuggles","festive", "cursive";
+    font-size: 5rem;
 }
 
 #healthysnacks{
@@ -146,8 +153,8 @@ header #menu{
     
     border-top: 10px solid white;
     border-bottom: 10px solid white;
-    border-left: 50px solid white;
-    border-right: 50px solid white;
+    border-left: 10px solid white;
+    border-right: 10px solid white;
     margin-top: 15px;
     box-shadow: 5px 5px 10px black;
     margin: auto;
@@ -155,7 +162,7 @@ header #menu{
 }
 
 .carousel-inner{
-    max-height: 400px;
+    max-height: 500px;
     
 }
 .carousel-inner img{
@@ -166,20 +173,29 @@ header #menu{
 
 
 
+
+
+
 /*about me page*/
 
-#mainabout{
-    background-image: url(../Resources/Images/stripaboutme.jpeg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 55% 30%;
+
+#mainbody{
+    
     border: 4px solid white;
     position: relative;
-    top: 50px;
-   
+    top:106px;
 }
 
+ #mainabout2{
+     background-image: url(../Resources/Images/family.jpeg);
+     height: 450px;
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-position: center;
+     color: white;
+     text-shadow: 3px 3px black;
+    
+ }
 
     /*jumbotron section*/
 
@@ -195,34 +211,22 @@ header #menu{
 /*body section*/
 
 
-#aboutimgdiv{
-    padding:50px 0;
+/* new about me page*/
+
+#aboutmetitle{
+    margin-top: 30px;
 }
 
-#aboutmeimg{
-    width: 100%;
-    
-    border-radius: 3%;
+#aboutmeimg2{
+    width: 50%;
     box-shadow: 5px 5px 10px black;
-   
+    border: 10px solid white;
 }
 
-#aboutmepara{
-    padding-top: 25px;
-    font-size: 30px;
+#aboutmep2{
+    margin-top: 25px;
+    width: 50%;
     
-
-}
-
-/*Family page*/
-
-#mainfamily{
-    background-image: url(../Resources/Images/vegasbackground.jpeg);
-    background-size: cover;
-    background-attachment: fixed;
-    border: 4px solid white;
-    position: relative;
-   
 }
 
 /*jumbotron section*/
@@ -274,7 +278,7 @@ header #menu{
     background-color: rgb(203, 224, 248);
     border: 4px solid white;
     position: relative;
-    top: 50px;
+    top: 106px;
    
 }
 
@@ -333,6 +337,12 @@ header #menu{
     color: white;
     box-shadow: 5px 5px 10px black;
     padding: 50px 0;
+    
+}
+
+#titlefont{
+    font-family: "fuggles","festive", "cursive";
+    font-size: 3rem;
 }
 /*footer section*/
 
