--- a/CSS/index.css
+++ b/CSS/index.css
@@ -57,7 +57,7 @@ header #menu{
 #blog{
     border: 10px solid white;
     margin:15px;
-    background-image: url(../Resources/Images/journel.jpeg);
+    background-image: url(/Resources/Images/StarTrain/IMG_0410.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
@@ -165,72 +165,16 @@ header #menu{
 }
 
 .carousel-inner{
-    max-height: 500px;
+    max-height: 600px;
     
 }
 .carousel-inner img{
-   max-height: 500px;
-   position: relative;
-   bottom: 90px;
+   max-height: 700px;
+   
+  
 }
 
 
-
-
-
-
-/*about me page*/
-
-
-#mainbody{
-    
-    border: 4px solid white;
-    position: relative;
-    top:106px;
-}
-
- #mainabout2{
-     background-image: url(../Resources/Images/family.jpeg);
-     height: 450px;
-     background-size: cover;
-     background-repeat: no-repeat;
-     background-position: center;
-     color: white;
-     text-shadow: 3px 3px black;
-    
- }
-
-    /*jumbotron section*/
-
-
-
-#aboutmeP{
-    text-shadow: 3px 3px black;
-    padding: 50px 0;
-    
-}
-
-
-/*body section*/
-
-
-/* new about me page*/
-
-#aboutmetitle{
-    margin-top: 30px;
-}
-
-#aboutmeimg2{
-    width: 50%;
-    box-shadow: 5px 5px 10px black;
-    border: 10px solid white;
-}
-
-#aboutmep2{
-    margin-top: 25px;
-    width: 50%;
-    
-}
 
 /*jumbotron section*/
 
@@ -272,76 +216,10 @@ header #menu{
     padding:20px 0;
 }
 
-#mycarouselimg{
-    max-height: 340px;
-}
 
 /*blog section*/
-#mainblog{
-    background-color: rgb(203, 224, 248);
-    border: 4px solid white;
-    position: relative;
-    top: 106px;
-   
-}
 
-#blogpagediv{
-    padding-top: 25px;
-}
 
-#blogpage{
-    background-image: url(../Resources/Images/pencil.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: -30%  45%;
-    border: 10px solid white;
-    margin: 15px;
-    color: white;
-    box-shadow: 5px 5px 10px black;
-    padding: 25px 0;
-
-    
-   
-}
-
-#theblog{
-    background-image: url(../Resources/Images/the\ blog\ bg.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    border: 10px solid white;
-    margin: 15px;
-    color: white;
-    box-shadow: 5px 5px 10px black;
-    padding: 50px 15px;
-    font-size: 25px;
-}
-
-#linkgone{
-    pointer-events: auto;
-}
-
-#blogs{
-    background-image: url(../Resources/Images/grandfatherclock.jpeg);
-    background-repeat: no-repeat;
-    background-position-x: 45%;
-    border: 10px solid white;
-    margin: 15px;
-    color: white;
-    box-shadow: 5px 5px 10px black;
-    padding: 50px 0;
-}
-
-#dadtime2{
-    background-image: url(../Resources/Images/dadtime2.jpeg);
-    background-repeat: no-repeat;
-    background-position-x: 45%;
-    border: 10px solid white;
-    margin: 15px;
-    color: white;
-    box-shadow: 5px 5px 10px black;
-    padding: 50px 0;
-    
-}
 
 #titlefont{
     font-family: "fuggles","festive", "cursive";
